Version: 0.0.5
Date: ????
  Info:
    - Decouple struct creation/destruction from belt control behaviour
    - Create the combinator through the checkbox
    - Rely on player.opened vs checking for tags
    - Assert instead of error
    - Remove combinator when moving the belt away from read all mode
    - Customize assert
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2024. 11. 12
  Info:
    - Setup the hidden blueprintable entity
    - Prevent the combinator from being placed somewhere without belts
    - Run on_tick conditionally
    - Improve on_tick readability
    - Disable the checkbox, label & button whilst not reading all belts
    - Cleanup nested gui access
    - Create and destroy the combinator based on hold (all belts)
    - Ensure the combinator doesn't exist as a ghost
    - Add a sanity check that ensures only one combinator can occupy a tile
    - Remove the combinator when the belt gets destroyed
    - Check for the prescence of any wires at all
    - As long as a belt exists at the combinator's tile, stay existing
    - Refractor struct to be keyed by an index (since it swaps belts)
    - Fix combinator not re-appearing
    - Fix todo
    - Broken logic rabbit hole
    - Cleanup warning
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2024. 11. 12
  Info:
    - Align the thumbnail B further from the right edge
    - Start gui off disabled
    - Check for hold mode when having a belt (ghost) open
    - Add entity_is_transport_belt(entity)
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 11. 12
  Info:
    - Setup the initial gui frame
    - Add circuit selector with caption
    - Add a checkbox
    - Replicate photoshopped thumbnail
    - Align the thumbnail B further from the right edge